feat : add basic user consumption code

--- a/sample/index.html
+++ b/sample/index.html
@@ -31,7 +31,8 @@
 
 			setTimeout(printStatus, 500);
 		}
-
-		printStatus();
+		let t = new Perceptor('a');
+		t.watch();
+		// printStatus();
 	</script>
 </html>
