feat<pageVisibility> : added page visibility support

--- a/sample/index.html
+++ b/sample/index.html
@@ -43,7 +43,7 @@
 			setTimeout(printStatus, 500);
 		}
 		window.clickCount = 0;
-		let t = new Perceptor(document.querySelector('#ad2'), {
+		let t = new Perceptor(document.querySelector('#ad'), {
 			clickHandler: function(e, f) {
 				window.log(e, f, clickCount++);
 			}
