--- a/sample/basicExample.html
+++ b/sample/basicExample.html
@@ -14,6 +14,7 @@
 
 	<script src="..\dist\bundle.js"></script>
 	<script>
-		new Perceptor(document.querySelector('#testdiv')).watch();
+		var tObserve = new Perceptor(document.querySelector('#testdiv'));
+		tObserve.watch();
 	</script>
 </html>
