--- a/documentation/website/pages/sample/multiple.html
+++ b/documentation/website/pages/sample/multiple.html
@@ -11,7 +11,7 @@
 			#ad2 {
 				width: 300px;
 				height: 250px;
-				background: #6c63ff;
+				background: #ee7202;
 				position: relative;
 				left: 100px;
 				top: 100px;
@@ -39,15 +39,21 @@
 			if (typeof window.log === 'function') {
 				window.log();
 			}
-
 			setTimeout(printStatus, 500);
 		}
 		window.clickCount = 0;
-		let t = new Perceptor(document.querySelector('#ad'), {
+		let t1 = new Perceptor(document.querySelector('#ad'), {
 			clickHandler: function(e, f) {
 				window.log(e, f, clickCount++);
 			}
 		});
-		t.watch();
+		t1.watch();
+		let t2 = new Perceptor(document.querySelector('#ad2'), {
+			clickHandler: function(e, f) {
+				window.log(e, f, clickCount++);
+			},
+			scheduler: { interval: 1000, attentionMode: false }
+		});
+		t2.watch();
 	</script>
 </html>
