--- a/documentation/website/pages/sample/offset.html
+++ b/documentation/website/pages/sample/offset.html
@@ -11,7 +11,7 @@
 			#ad2 {
 				width: 300px;
 				height: 250px;
-				background: #6c63ff;
+				background: #ee7202;
 				position: relative;
 				left: 100px;
 				top: 100px;
@@ -19,9 +19,19 @@
 			#ad2 {
 				left: 500px;
 			}
+			#header {
+				height: 150px;
+				width: 100%;
+				background: black;
+				position: sticky;
+				top: 0;
+				z-index: 10;
+			}
 		</style>
 	</head>
 	<body>
+		<div id="header"></div>
+
 		<div id="ad">
 			ADVERTISEMENT
 		</div>
@@ -43,10 +53,11 @@
 			setTimeout(printStatus, 500);
 		}
 		window.clickCount = 0;
-		let t = new Perceptor(document.querySelector('#ad'), {
+		let t = new Perceptor(document.querySelector('#ad2'), {
 			clickHandler: function(e, f) {
 				window.log(e, f, clickCount++);
-			}
+			},
+			viewOffset: { top: 150 }
 		});
 		t.watch();
 	</script>
