--- a/sample/customSpectator.html
+++ b/sample/customSpectator.html
@@ -52,7 +52,7 @@
 		});
 
 		var customSpectator = function(perceptor, currentResult, prevResult) {
-			//if float is present in chile DOM, it should be reported as visibile
+			//if float is present in child DOM, it should be reported as visibile
 			if (document.getElementById('testcontainer').classList.contains('float')) {
 				currentResult.isVisible = true;
 				if (currentResult.isVisible && prevResult.isVisible) {
