--- a/documentation/website/pages/sample/multiple copy.html
+++ b/documentation/website/pages/sample/multiple copy.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<title>Ad Detection</title>
 		<style>
 			body {
 				height: 2000px;
@@ -35,9 +36,26 @@
 	</body>
 	<script src="..\dist\bundle.js"></script>
 	<script>
-		let t1 = new Perceptor(document.querySelector('#testDiv'));
+		window.log = console.log.bind(console);
+		function printStatus() {
+			if (typeof window.log === 'function') {
+				window.log();
+			}
+			setTimeout(printStatus, 500);
+		}
+		window.clickCount = 0;
+		let t1 = new Perceptor(document.querySelector('#testDiv'), {
+			clickHandler: function(e, f) {
+				window.log(e, f, clickCount++);
+			}
+		});
 		t1.watch();
-		let t2 = new Perceptor(document.querySelector('#testDiv2'));
+		let t2 = new Perceptor(document.querySelector('#testDiv2'), {
+			clickHandler: function(e, f) {
+				window.log(e, f, clickCount++);
+			},
+			scheduler: { interval: 1000, attentionMode: false }
+		});
 		t2.watch();
 	</script>
 </html>
