--- a/sample/multiple.html
+++ b/sample/multiple.html
@@ -1,59 +1,43 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Ad Detection</title>
 		<style>
 			body {
 				height: 2000px;
 				width: 2500px;
 			}
-			#ad,
-			#ad2 {
+			#testDiv,
+			#testDiv2 {
 				width: 300px;
 				height: 250px;
-				background: #ee7202;
+				color: #fff;
+				padding: 20px;
+				background: #6c63ff;
 				position: relative;
 				left: 100px;
 				top: 100px;
 			}
-			#ad2 {
+			#testDiv2 {
 				left: 500px;
 			}
 		</style>
 	</head>
 	<body>
-		<div id="ad">
-			ADVERTISEMENT
+		<div id="testDiv">
+			Element To Track
 		</div>
-		<div id="fad" style="height:600px;">
-			space
+		<div id="space" style="height:600px;">
+			Other elements
 		</div>
-		<div id="ad2">
-			ADVERTISEMENT
+		<div id="testDiv2">
+			Element To Track
 		</div>
 	</body>
 	<script src="..\dist\bundle.js"></script>
 	<script>
-		window.log = console.log.bind(console);
-		function printStatus() {
-			if (typeof window.log === 'function') {
-				window.log();
-			}
-			setTimeout(printStatus, 500);
-		}
-		window.clickCount = 0;
-		let t1 = new Perceptor(document.querySelector('#ad'), {
-			clickHandler: function(e, f) {
-				window.log(e, f, clickCount++);
-			}
-		});
+		var t1 = new Perceptor(document.querySelector('#testDiv'));
 		t1.watch();
-		let t2 = new Perceptor(document.querySelector('#ad2'), {
-			clickHandler: function(e, f) {
-				window.log(e, f, clickCount++);
-			},
-			scheduler: { interval: 1000, attentionMode: false }
-		});
+		var t2 = new Perceptor(document.querySelector('#testDiv2'));
 		t2.watch();
 	</script>
 </html>
