--- a/sample/multiconfig.html
+++ b/sample/multiconfig.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Ad Detection</title>
+		<title>Perceptor Examples</title>
 		<style>
 			body {
 				height: 2000px;
