--- a/sample/offset.html
+++ b/sample/offset.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Ad Detection</title>
+		<title>Perceptor Examples</title>
 		<style>
 			body {
 				height: 2000px;
 				width: 2500px;
 			}
-			#ad,
-			#ad2 {
+			#testDiv,
+			#testDiv2 {
 				width: 300px;
 				height: 250px;
-				background: #ee7202;
+				color: #fff;
+				padding: 20px;
+				background: #6c63ff;
 				position: relative;
 				left: 100px;
 				top: 100px;
 			}
-			#ad2 {
+			#testDiv2 {
 				left: 500px;
 			}
 			#header {
@@ -32,31 +34,19 @@
 	<body>
 		<div id="header"></div>
 
-		<div id="ad">
-			ADVERTISEMENT
+		<div id="testDiv">
+			Element Not Tracked (scroll down)
 		</div>
-		<div id="fad" style="height:600px;">
-			space
+		<div id="space" style="height:600px;">
+			Other elements
 		</div>
-		<div id="ad2">
-			ADVERTISEMENT
+		<div id="testDiv2">
+			Element To Track
 		</div>
 	</body>
 	<script src="..\dist\bundle.js"></script>
 	<script>
-		window.log = console.log.bind(console);
-		function printStatus() {
-			if (typeof window.log === 'function') {
-				window.log();
-			}
-
-			setTimeout(printStatus, 500);
-		}
-		window.clickCount = 0;
-		var t = new Perceptor(document.querySelector('#ad2'), {
-			clickHandler: function(e, f) {
-				window.log(e, f, clickCount++);
-			},
+		var t = new Perceptor(document.querySelector('#testDiv2'), {
 			viewOffset: { top: 150 }
 		});
 		t.watch();
